--- a/MATERIALES/Configuracion.cfg
+++ b/MATERIALES/Configuracion.cfg
@@ -1,5 +1,8 @@
 #Fichero de configuracion
-#Thu May 26 01:58:38 CEST 2022
-propiedad2=empty
-propiedad3=empty
-propiedad1=empty
+#Mon May 30 13:53:16 CEST 2022
+server=localhost
+password=12345Ab\#\#
+port=1433
+user=sa
+db=SBODemoES
+url=jdbc\:sqlserver\://localhost\:1433;databaseName\=SBODemoES;encrypt\=false
