--- a/MATERIALES/Configuracion.cfg
+++ b/MATERIALES/Configuracion.cfg
@@ -1,7 +1,8 @@
 #Fichero de configuracion
-#Mon May 30 13:53:16 CEST 2022
+#Mon May 30 14:03:47 CEST 2022
 server=localhost
 password=12345Ab\#\#
+driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 port=1433
 user=sa
 db=SBODemoES
