--- a/MATERIALES/Configuracion.cfg
+++ b/MATERIALES/Configuracion.cfg
@@ -1,9 +1,10 @@
 #Fichero de configuracion
-#Mon May 30 14:03:47 CEST 2022
+#Tue May 31 01:55:07 CEST 2022
 server=localhost
 password=12345Ab\#\#
 driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 port=1433
+dir_347=C\:\\Users\\ricar\\eclipse-workspace\\SAP_B1\\MATERIALES\\347.txt
 user=sa
 db=SBODemoES
 url=jdbc\:sqlserver\://localhost\:1433;databaseName\=SBODemoES;encrypt\=false
