--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/RicardoAlonzoHuaripa/eclipse-workspace/SAP_B1/MATERIALES/sqljdbc_10.2.0.0_enu/sqljdbc_10.2/enu/mssql-jdbc-10.2.0.jre8.jar">
+	<classpathentry kind="lib" path="C:/drivers/sqljdbc_10.2.0.0_enu/sqljdbc_10.2/enu/mssql-jdbc-10.2.0.jre8.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
