--- a/MATERIALES/Configuracion.cfg
+++ b/MATERIALES/Configuracion.cfg
@@ -1,10 +1,10 @@
 #Fichero de configuracion
-#Tue May 31 01:55:07 CEST 2022
+#Wed Jun 01 08:44:55 CEST 2022
 server=localhost
 password=12345Ab\#\#
 driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 port=1433
-dir_347=C\:\\Users\\ricar\\eclipse-workspace\\SAP_B1\\MATERIALES\\347.txt
+dir_347=C\:\\Users\\RicardoAlonzoHuaripa\\eclipse-workspace\\SAP_B1\\MATERIALES\\347.txt
 user=sa
 db=SBODemoES
 url=jdbc\:sqlserver\://localhost\:1433;databaseName\=SBODemoES;encrypt\=false
