--- a/MATERIALES/Configuracion.cfg
+++ b/MATERIALES/Configuracion.cfg
@@ -1,11 +1,11 @@
 #Fichero de configuracion
-#Wed Jun 01 00:23:17 CEST 2022
+#Sat Jun 04 15:26:25 CEST 2022
 server=localhost
 password=12345Ab\#\#
+dir_347.txt=C\:\\Users\\ricar\\eclipse-workspace\\SAP_B1\\347.txt
 driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 port=1433
-dir_347=C\:\\Users\\ricar\\eclipse-workspace\\SAP_B1\\MATERIALES\\347.dat
+urlDeclaraciones=jdbc\:sqlserver\://localhost\:1433;databaseName\=declaraciones;encrypt\=false
 user=sa
-consulta347=select\r\n\tYEAR(T0.RefDate) as Ejercicio,\r\n\tIC.LicTradNum as NIF,\r\n\tIC.CardName\tAS Nombre,\r\n\tIC.State1 as Provincia1,\r\n\tIC.ZipCode as CP,\r\n\tIIF(IC.Country\='ES',\r\n\t    iif(ISNUMERIC(IC.ZipCode)\=1,FORMAT(CONVERT(INT, IC.ZipCode)/1000,'00'),''),\r\n\t\t'99') as Provincia,\r\n\tIIF(IC.Country\='ES','',IC.Country) as Pais,\r\n\r\n\tiif(TI.Category\='I','A','B') as TipoIva,\r\n\tsum(iif(Debit-Credit\=0,\r\n\t\t\t\t\t\t\tSIGN(T0.LocTotal),\r\n\t\t\t\t\t\t\tiif(TI.Category\='I',-1,1)*SIGN(T1.Credit-T1.Debit)\r\n\t\t\t)*\r\n\t\t(abs(T1.BaseSum)+abs(Debit-Credit))) as Total,\r\n\tsum(T1.BaseSum)\t\t\t\t\t\t\tAS TotalBase,\r\n\tsum(SIGN(T1.BaseSum)*abs(Debit-Credit)) as TotalCuota\r\nFROM OJDT T0  (NOLOCK)\r\n\tLEFT JOIN JDT1 T1 (NOLOCK) ON T0.TransId\=T1.TransId\r\n\tLEFT JOIN OCRD IC (NOLOCK) ON T1.ContraAct\=IC.CardCode\r\n\tleft join OVTG TI (NOLOCK) ON T1.VatGroup\=TI.Code\r\nWHERE \r\nYEAR(T0.RefDate)\=2016 AND VatLine\='Y' and EquVatRate\=0\r\n\tand TI.R349Code\=0\r\nGROUP BY YEAR(T0.RefDate), IC.LicTradNum, IC.CardName,IC.State1, TI.Category, IC.Country, IC.State1, IC.ZipCode\r\nHAVING \r\nABS(sum(iif(Debit-Credit\=0,\r\n\t\t\t\t\t\t\tSIGN(T0.LocTotal),\r\n\t\t\t\t\t\t\tiif(TI.Category\='I',-1,1)*SIGN(T1.Credit-T1.Debit)\r\n\t\t\t)*\r\n\t\t(abs(T1.BaseSum)+abs(Debit-Credit))))>3005.06
 db=SBODemoES
-url=jdbc\:sqlserver\://localhost\:1433;databaseName\=SBODemoES;encrypt\=false
+urlSBO=jdbc\:sqlserver\://localhost\:1433;databaseName\=SBODemoES;encrypt\=false
